--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 #GENERAL INFO
-ACME_EMAIL=email@domain.com
-PORTAINER_TRAEFIK_URL=whatever.mydomain.com
+ACME_EMAIL=webmaster@ecampuslearning.com
+PORTAINER_TRAEFIK_URL=containers.ecampuslearning.com
