--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
 
   traefik:
@@ -18,8 +16,8 @@ services:
       - "--certificatesresolvers.letsencrypt.acme.email=${ACME_EMAIL}"
       - "--certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json"
     ports:
-      - "80:80"
-      - "443:443"
+      - "85:80"
+      - "445:443"
     volumes:
       - ./letsencrypt:/letsencrypt
       - /var/run/docker.sock:/var/run/docker.sock:ro
@@ -59,3 +57,16 @@ services:
 
 volumes:
   portainer_data:
+
+portainer_agent:
+    image: portainer/agent
+    container_name: portainer_agent
+    ports:
+      - "9001:9001"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro  # Mount with read-only access
+      - /var/lib/docker/volumes:/var/lib/docker/volumes:ro  # Mount with read-only access
+    restart: always
+    environment:
+      - AGENT_CLUSTER_ADDR=tasks.portainer_agent
+      - AGENT_PORTAINER_URL=http://portainer:9000
